fix(words): responsive styles + code overflow

--- a/src/static/stylesheets/base/typography.scss
+++ b/src/static/stylesheets/base/typography.scss
@@ -41,8 +41,16 @@ h6 {
   font-family: fonts.$article_meta;
 }
 
+pre {
+  overflow-x: auto;
+}
+
 code {
   font-family: fonts.$article_code;
+  font-size: 1rem;
+  line-height: 1rem;
+  overflow-wrap: normal;
+  word-break: normal;
 
   strong,
   b {
