--- a/src/static/stylesheets/words.scss
+++ b/src/static/stylesheets/words.scss
@@ -17,85 +17,14 @@
 
 $header_height: 60px;
 $max_content_width: 680px;
-$max_content_responsive_width: $max_content_width + 60px;
+$max_content_responsive_width: $max_content_width + 250px;
 $banner_width: 20%;
+$banner_height: 100px;
 
 .words {
-  // display: grid;
-  // grid-template-columns: $banner_width auto;
-  // grid-template-rows: auto;
-  // grid-template-areas:
-  //   "header header"
-  //   "banner article"
-  //   "footer footer";
 }
 
-// .words > header {
-//   grid-area: header;
-//   z-index: 5;
-//   // position: sticky;
-//   // top: 0;
-//   // left: 0;
-//   // right: 0;
-//   position: relative;
-//   height: $header_height;
-//   padding: 1rem;
-//   background-color: map.get(colors.$words, 'main');
-//   font-size: 2.5rem;
-//   line-height: 1.2rem;
-//   color: white;
-//   overflow: hidden;
-
-//   nav {
-//     z-index: 8;
-//     position: absolute;
-//     right: 1.5rem;
-//     top: 1.1rem;
-
-//     a {
-//       text-decoration: none;
-//       font-family: fonts.$article_semibold;
-//       border: 0;
-//       color: map.get(colors.$words, 'text');
-
-//       &:hover,
-//       &:active,
-//       &:focus {
-//         color: map.get(colors.$words, 'dark');
-//       }
-//     }
-//   }
-
-//   .name {
-//     z-index: 6;
-//     position: absolute;
-//     bottom: 0.5rem;
-//     left: 1.5rem;
-//     font-size: 6.5rem;
-//     font-weight: 100;
-//     font-family: fonts.$article_title_light;
-//     line-height: 1rem;
-//     color: map.get(colors.$words, 'dark');
-//     opacity: 0.5;
-
-//     strong {
-//       font-family: fonts.$article_title;
-//     }
-//   }
-// }
-
-// .words > footer {
-//   grid-area: footer;
-//   // width: 100%;
-//   padding: 2rem;
-//   background-color: #ddd;
-//   color: #666;
-//   font-family: fonts.$article_title_light;
-// }
-
-.words > .banner {
-  // grid-area: banner;
-  // z-index: 1;
+.words .banner {
   position: fixed;
   top: 0;
   left: 0;
@@ -127,12 +56,7 @@ $banner_width: 20%;
 }
 
 .words > article {
-  // grid-area: article;
-  //width: 100%;
-
   margin: 0 0 0 $banner_width;
-  // margin: 0 1.5rem 4rem $banner-width;
-
   font-size: 1.25rem;
 
   .content {
@@ -173,87 +97,40 @@ $banner_width: 20%;
   }
 
   footer {
-    // grid-area: footer;
-    //width: 100%;
-    margin-top: 6rem;
-    // padding: 2rem;
-    // background-color: #ddd;
+    margin: 6rem 0 3rem 0;
     color: #666;
     font-family: fonts.$article_title_light;
   }
 }
 
-// .words > section {
-//   display: grid;
-//   width: 100%;
-//   justify-content: center;
-//   padding-top: 2rem;
-//   padding-bottom: 4rem;
-
-
-
-//   & > article {
-//     grid-area: article;
-//     justify-content: center;
-//     // width: 100%;
-//     // max-width: $max_content_width;
-//     // margin: 0 1.5rem 4rem $banner-width;
-//     overflow-wrap: break-word;
-//     word-break: break-word;
-//     font-size: 1.25rem;
-
-//     header {
-//       h1 {
-//         margin-bottom: 0;
-//       }
-
-//       ul {
-//         list-style: none;
-//         margin: 0 0 2rem 0;
-//         padding: 0;
-
-//         li {
-//           display: inline-block;
-//         }
-//       }
-//     }
-
-//     img {
-//       width: 100%;
-//     }
-//   }
-// }
-
 @media screen and (max-width: $max_content_responsive_width) {
-  .words > header {
-    nav {
-      right: 1rem;
-    }
-
-    .name {
-      bottom: 0.05rem;
-      left: 1rem;
-      font-size: 3rem;
-    }
+  .words .banner {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: $banner-height;
+    // background-color: #808080;
+    // background-repeat: no-repeat;
+    // background-size: cover;
+    // background-position: center center;
   }
 
-  .words > section {
-    display: block;
-    justify-content: normal;
-    padding-top: 0;
-    padding-bottom: 0;
+  .words > article {
+    margin: $banner-height 0 0 0;
+    padding-top: 1rem;
 
-    & > article {
+    .content {
       width: auto;
+      margin: 0 auto;
       font-size: 1.1rem;
       line-height: 1.5rem;
-      margin-left: 1rem;
-      margin-right: 1rem;
 
       h1 {
         font-size: 3rem;
-        line-height: 2.25rem;
-        margin-bottom: 2.5rem;
+        line-height: 3rem;
+        margin-bottom: 1.25rem;
       }
 
       h2 {
@@ -261,6 +138,18 @@ $banner_width: 20%;
         line-height: 1.5rem;
         padding-top: 1.75rem;
       }
+    }
+
+    footer {
+      margin-bottom: 2rem;
+    }
+  }
+}
+
+@media screen and (max-width: ($max_content_width + 60px)) {
+  .words > article {
+    .content {
+      margin: 0 1rem;
     }
   }
 }
